# DNNCam

./: .gitignore  CMakeLists.txt  Makefile  README.md  Version.cmake  bin  fix_res_change.patch
app/: main.cpp
cgi-bin/: delete  list  rpc  setroi  temps
examples/: CvSink.cpp  Thread.cpp  concurrentqueue.h  config.h
examples/Argus/: CvSink.cpp  CvSink.h  Thread.cpp  Thread.h  capture.cpp  capture.h  concurrentqueue.h  config.h  main.cpp
examples/Filewriting/: output.avi  record.py
examples/GstreamerOpenCV/: CMakeLists.txt  simpleCV_GStreamer.c  simpleCV_Gstreamer.cpp  very_simple.cpp
examples/GstreamerOpenCV_python/: sample.py  sample2.py
include/: ArgusCamera.hpp  AutoWhiteBalanceMode.hpp  CameraFrame.hpp  DNNCam.hpp  DNNCamServer.hpp  ImageEncoding.hpp  Timer.hpp  camera.hpp  configuration.hpp  datasource.hpp  datasource_camera.hpp  defines.hpp  frame.hpp  frame_processor.hpp  imx377camera.hpp  log.hpp  motordriver.hpp  motorxmlrpc.hpp  new_worker.hpp  safequeue.hpp  stream.hpp
kernelpatch/: README  build_kernel.sh  leopard.single.quill.patch
kernelpatch/28.1/: leopard.single.common.patch
kernelpatch/28.2/: 28.2-dtbs.patch  28.2-dts-common.patch  28.2-dts-quill.patch  28.2-kernel.patch
nvidia/: CMakeLists.txt  Thread.cpp
nvidia/include/: Ordered.h  Thread.h
package/: camerastreamer.service  lensdriver.cfg  lensdriver.service  modbus.py  modbuslens.py  modbuslens.service  postinst  test-modbus.py
scripts/: OCVBoulderAI.sh
src/: '  ArgusCamera.cpp  AutoWhiteBalanceMode.cpp  CMakeLists.txt  DNNCam.cpp  ImageEncoding.cpp  Timer.cpp  camerastreamer.cpp  configuration.cpp  datasource.cpp  datasource_camera.cpp  frame_processor.cpp  imx377camera.cpp  lensDriver.cpp  log.cpp  motordriver.cpp  stream.cpp  test_motor.cpp
test/: Camera.hpp  FrameError.hpp
web/: dnncam.js  finder.css  index.html
